[package]
name = "aline"
version = "0.1.3"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/jcornaz/aline"
description = "A simple 2d linear algebra library suitable for no_std"
categories = ["no-std", "game-development"]
keywords = ["vector", "math", "2d", "gamedev", "no_std"]

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []
libm = ["dep:libm"]
serde = ["dep:serde"]
approx_v05 = ["dep:approx_v05"]

[dependencies]
approx_v05 = { package = "approx", version = "0.5.1", default-features = false, optional = true }
libm = { version = "0.2.8", default-features = false, optional = true }
serde = { version = "1.0.194", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
serde_json = "1.0.108"
approx_v05 = { package = "approx", version = "0.5.1", default-features = false }

[lints.rust]
future_incompatible = "deny"
nonstandard_style = "deny"
unsafe_code = "deny"
private_interfaces = "warn"
private_bounds = "warn"
rust_2018_idioms = "warn"
missing_docs = "allow"

[lints.clippy]
exhaustive_enums = "warn"
exhaustive_structs = "warn"
pedantic = "warn"
