[package]
name = "aline"
version = "0.1.4"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/jcornaz/aline"
description = "A simple 2d linear algebra library suitable for no_std"
categories = ["no-std", "game-development"]
keywords = ["vector", "math", "2d", "gamedev", "no_std"]

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["aline_v1/std"]
libm = ["aline_v1/libm"]
serde = ["aline_v1/serde"]
approx_v05 = ["aline_v1/approx_v05"]

[dependencies]
aline_v1 = { package = "aline", version = "1.0", default-features = false }

[dev-dependencies]
rstest = { version = "0.22.0", default-features = false }
serde_json = "1.0"
approx_v05 = { package = "approx", version = "0.5.1", default-features = false }

[lints.rust]
unsafe_code = "deny"
private_interfaces = "warn"
private_bounds = "warn"
missing_docs = "warn"

[lints.clippy]
exhaustive_enums = "warn"
exhaustive_structs = "warn"
pedantic = { level = "warn", priority = -1 }
